@@ -5,15 +5,11 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.2      4.10     2.1.9  TBD
-# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
-# PE 2017.3     5.3      2.4.4  2018-12-31
-# SIMP 6.3      5.5      2.4.4  TBD***
-# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# SIMP 6.3      5.5.10   2.4.5  TBD***
+# PE 2018.1.7   5.5.10   2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
-# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
 
 ---
 language: ruby
@@ -38,19 +34,17 @@ addons:
 
 before_install:
   - rm -f Gemfile.lock
+  - gem install -v '~> 1.17' bundler
 
 global:
   - STRICT_VARIABLES=yes
 
 jobs:
-  allow_failures:
-    - name: 'Latest Puppet 6.x (allowed to fail)'
-
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5"
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
@@ -62,42 +56,23 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
+      rvm: 2.4.5
+      name: 'Puppet 5.5.10 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="5.5.10"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
     - stage: spec
-      name: 'Puppet 5.3 (PE 2017.3)'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.3.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.4.4
-      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
-      env: PUPPET_VERSION="~> 5.5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 5.x'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 6.x (allowed to fail)'
+      name: 'Latest Puppet 6.x'
       rvm: 2.5.1
-      env: PUPPET_VERSION="~> 6.0"
+      env: PUPPET_VERSION="~> 6"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
+    # Uncomment the following for deployment tasks and set 'secure' in both
+    # sections appropriately
     - stage: deploy
-      rvm: 2.4.4
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
@@ -106,7 +81,7 @@ jobs:
       deploy:
         - provider: releases
           api_key:
-            secure: "zSTlrwuq3s3Gz74zQ9NgBH+hKXeRfzMf+zwVOPNjejOiS10j9nv/Q0GmCPVrr30fCYlLoRFky+JxdNrJw6klBy7Y8h+Tr909D88b8mnvQbRUm+xY78i4qhTQ+Ao8WeKoJkLjaFO8ZQJ+GWRzvApFXz1XE0KC64sKv+Gk3lR07dxKC7donliDe11p8vIi8kZB+sgwdPYTLZfvEapLA/eRomC/SVDWqx4jJX94ZETCgpURbIAiRq1mj5E18BWf0A1wz2okY4JAEoYsv+wHA6Nrx+eqJXnNIYrY/TOYrX2BrrqWuAPRU2S1rjn+0/MmbHARwmAwU3tLbiEYw79jfaxw5W9CWyZu1ABIGhr+RjQjUfL6wrojnVBBbm6qXlADAQE9t/TsNFQJcOKcJOGlQjLf0bbSrRP22gnRRNQTPrZH5VXZlyAgvCYU8ZEKYICz/rjID5YD9kNheJzWjb0fX5ya2z1E0odQEE9Sdc00/f6ohWmiDrMl8y60dzueCzGb45WQ9DvlsH8/qFI76x4kwIja+DmxV9gdsO9KuA2yyVeEAUd2TkpLqh98kLM1VstHSLeYaup0bgN0P3WBd8KU3RwbjBkpUy2S6mAI+FcZwAJYoCjV2l3CQOX/RZ5XzdqQt8mSwdJI/wGKiIO35wxwXB74i3HkiJrWYeF/Gb3jOZPweqQ="
+            secure: "CHANGE_SECURE"
           skip_cleanup: true
           on:
             tags: true
@@ -114,8 +89,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "e9jul8wsW6DaKvxvMojPT8YZT4iV2CIUru5kxmdNT9lKpNi0lEDqcMGoDEjJaLiKxEiR5KlkoZw+lq8S+yGe4icurh66bksCcCGxBio/H9yB5PktMXqEbFzF5dOXfKjNWRT8u4hOQTCmdagqdnlzZzkOnFKjvBxFX0qpBSLoEI2+c5Ah0SAuTtIf13PWKtNYVkFXLO40+zZ2xR+mVu1lJGZ7v5tMYBcC2VTlajpRu0QLUKHfkbTuk9aokZDBSjX5CU388t9YxRIKelbjr0I3Ah4iuWrRWT1HMtKeYF1XWCvLqJ+pXJXL9pKnlzCnUnvsHTYhM//NiBklmHyLqFuKokkK/FUOWlN7ga0HAk8tkj1C5ixyXiwZ1kLpiCCNmd0TLXup5wmvDW2lfZFpTxKvCURRbrhbbH0md4vBb6k25D6ZcHkeblOSyZCrI3zKKFgyKI3dpBraEjUXZWI4Sljtoq7xv8qpo+lIE0zQuA2pkAkIQ6jCqO6CbjYkR7FR73uAMSh+eCdqyD9Az4wrX2R5pM588XI8qu+INTwrtF26du2KExWkukrDWKGtck+msqPSYE2uBixFJJBIonqvHzXsrM9bvxvp8slYCYhDDKQI2xut1Hi6rMxv3MVVFzYYEdTyNiKrBWgLnoIjjzxTEsMPOtDNXpiK83LKIYeKEg8oHxI="
+            secure: "CHANGE_PASSWORD"
           on:
             tags: true
-            rvm: 2.4.4
             condition: '($SKIP_FORGE_PUBLISH != true)'
